2000-12-01  Max Horn  <max@quendi.de>
	* removed lists.cc from CVS and the makefile

2000-12-01  Max Horn  <max@quendi.de>
	* list.cc: removed class Slist & consorts
	* list.h: added class Exult_queue and Actor_queue which replace Slist & consorts
	* combat.*, schedule.*: use Actor_queue instead of Slist
	* vec.h: renamed FeatureVector -> Exult_vector; GOVector -> Game_object_vector; etc.
	  to match the naming conventions used throughout exult
	* various files: update to match class name changes
	* chunks.cc: fixed delete -> delete []
	* AUTHORS: added Ryan Nunn, he was missing for whatever reasons
	* args.*: added proper GPL header
	* various files: added missing "using std::xyz" statments
	* expack.cc: don't use strdup anymore
	
2000-11-30  Jeff Freedman  <jeff@amy.nerble.net>
	* Broke off chunks.{cc,h} and ordinfo.h from objs.{cc,h}.

2000-11-30  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* quotes.txt: new quote

2000-12-01  Ryan Nunn  <triforce@merlin.net.au>
	* Added MidiInfo.txt: Contains some information about midi. Unfinished.
	* Makefile.win32: Was broken, now works. Also removed -g added -O2
	* audio/Midi.cc: Added SFX conversion option gs127 (same as none)
	* audio/xmidi.cc: Fixed potential rare memory leak.

2000-11-29  Jeff Freedman  <jeff@amy.nerble.net>
	* Font-handling move to shapes directory.

2000-11-29  Tristan Tarrant  <nadir@users.sourceforge.net>
	* audio/midi_drivers/Timidity_binary.cc: use %lu in sprintf instead of
	  the meaningless %ul

2000-11-29  Max Horn  <max@quendi.de>
	* lots-o-files: changed #include <something.h> to the C++ version: 
	  include <csomething>
	* exult.cc: removed Mouse *mouse and bool mouse_enabled
	* Mouse.h/cc: added static Mouse *Mouse::mouse and 
          bool Mouse::mouse_enabled
	* various files: adapted to new class members of Mouse

2000-11-29  Max Horn  <max@quendi.de>
	* Makefile.be/win32/cygwin: fixed to properly support new dirs gumps/, 
	  shapes/, usecode/