@@ -34,7 +34,7 @@ CONF_OBJS=Configuration.o XMLEntity.o xmldump.o xmlparse.o
 # unused: xmain.o
 MIDI_DRV_OBJS=be_midi.o
 # unused: KMIDI.o Timidity_binary.o forked_player.o win_MCI.o
-AUDIO_OBJS=Audio.o Midi.o Mixer.o SDL_mapping.o pcb.o xmidi.o $(MIDI_DRV_OBJS)
+AUDIO_OBJS=Audio.o Midi.o Mixer.o SDL_mapping.o pcb.o xmidi.o soundtest.o $(MIDI_DRV_OBJS)
 # unused: test.o u7audiotool.o
 FLIC_OBJS=playfli.o
 FILE_OBJS=U7file.o Flex.o IFF.o Table.o Flat.o utils.o
